--- a/index.html
+++ b/index.html
@@ -17,24 +17,13 @@
     <section>
       <h2>Jogadores</h2>
       <form id="playersForm">
-        <input
-          type="text"
-          name="player1"
-          id="player1"
-          placeholder="Jogador 1"
-        />
-        <input
-          type="text"
-          name="player2"
-          id="player2"
-          placeholder="Jogador 2"
-        />
-        <button type="button" id="startBtn">começar</button><br /><br />
+        <label for="player1">X</label>
+        <input type="text" id="player1" placeholder="Jogador 1" />
+        <label for="player2">O</label>
+        <input type="text" id="player2" placeholder="Jogador 2" />
+        <button type="button" id="start">começar</button><br /><br />
       </form>
-      <h3>
-        Vez do(a):
-        <ul id="turnCurrent"></ul>
-      </h3>
+      <h3>Vez do(a): <span id="turnPlayer"></span></h3>
     </section>
     <section id="gameBoard">
       <span data-region="0.0"></span>
